2006-06-16 Added colormaps from gist (gist_earth, gist_stern, 
           gist_rainbow, gist_gray, gist_yarg, gist_heat, gist_ncar) - JW

2006-06-16 Added a pointer to parent in figure canvas so you can
           access the container with fig.canvas.manager.  Useful if
           you want to set the window title, eg in gtk
           fig.canvas.manager.window.set_title, though a GUI neutral
           method would be preferable JDH

2006-06-16 Fixed colorbar.py to handle indexed colors (i.e.,
           norm = no_norm()) by centering each colored region
           on its index. - EF

2006-06-15 Added scalex and scaley to Axes.autoscale_view to support
           selective autoscaling just the x or y axis, and supported
           these command in plot so you can say plot(something,
           scaley=False) and just the x axis will be autoscaled.
           Modified axvline and axhline to support this, so for
           example axvline will no longer autoscale the y axis. JDH

2006-06-13 Fix so numpy updates are backward compatible - TEO

2006-06-12 Updated numerix to handle numpy restructuring of
           oldnumeric - TEO

2006-06-12 Updated numerix.fft to handle numpy restructuring
           Added ImportError to numerix.linear_algebra for numpy -TEO

2006-06-11 Added quiverkey command to pylab and Axes, using
           QuiverKey class in quiver.py.  Changed pylab and Axes
           to use quiver2 if possible, but drop back to the
           newly-renamed quiver_classic if necessary.  Modified
           examples/quiver_demo.py to illustrate the new quiver
           and quiverkey.  Changed LineCollection implementation
           slightly to improve compatibility with PolyCollection. - EF

2006-06-11 Fixed a usetex bug for windows, running latex on files
           with spaces in their names or paths was failing - DSD

2006-06-09 Made additions to numerix, changes to quiver to make it
           work with all numeric flavors. - EF
