@@ -63,7 +63,8 @@ def new_figure_manager( num, *args, **kwargs ):
     """
     Create a new figure manager instance
     """
-    thisFig = Figure( *args, **kwargs )
+    FigureClass = kwargs.pop('FigureClass', Figure)    
+    thisFig = FigureClass( *args, **kwargs )
     canvas = FigureCanvasQT( thisFig )
     manager = FigureManagerQT( canvas, num )
     return manager
