@@ -166,8 +166,8 @@ def new_figure_manager(num, *args, **kwargs):
     # do it -- see backend_wx, backend_wxagg and backend_tkagg for
     # examples.  Not all GUIs require explicit instantiation of a
     # main-level app (egg backend_gtk, backend_gtkagg) for pylab
-
-    thisFig = Figure(*args, **kwargs)
+    FigureClass = kwargs.pop('FigureClass', Figure)
+    thisFig = FigureClass(*args, **kwargs)
     canvas = FigureCanvasTemplate(thisFig)
     manager = FigureManagerTemplate(canvas, num)
     return manager
